--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,14 @@
 {
   "singleQuote": true,
-  "trailingComma": "none",
-  "printWidth": 100
+  "trailingComma": "all",
+  "printWidth": 100,
+  "semi": false,
+  "svelteBracketSameLine": true,
+  "svelteStrictMode": false,
+  "svelteAllowShorthand": true,
+  "svelteBracketNewLine": true,
+  "svelteSortOrder": "markup-scripts-styles-options",
+  "bracketSameLine": true,
+  "arrowParens": "avoid",
+  "htmlWhitespaceSensitivity": "strict"
 }
