--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-custom": "workspace:*",
+    "husky": "^8.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
+    "sass": "^1.62.0",
     "turbo": "latest"
   },
   "packageManager": "pnpm@7.15.0"
