--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -8,7 +8,9 @@
     "@typescript-eslint/parser": "^5.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-turbo": "latest",
-    "eslint-plugin-svelte3": "^4.0.0"
+    "eslint-plugin-align-assignments": "^1.1.2",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "typescript": "^4.7.2"
   },
   "publishConfig": {
     "access": "public"
