add prisma conf

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,5 +5,11 @@
   },
   "devDependencies": {
     "prisma": "4.13.0"
-  }
+  },
+  "scripts": {
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate"
+  },
+  "main": "./index.ts",
+  "types": "./index.ts"
 }
