--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
   "dependencies": {
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "database": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "latest",
