add prisma monster

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,13 @@
   },
   "[css]": {
     "editor.formatOnSave": false
-  }
+  },
+  "[json]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[prisma]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "Prisma.prisma"
+  },
 }
