--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,8 @@
     "fivethree.vscode-svelte-snippets",
     "dbaeumer.vscode-eslint",
     "syler.sass-indented",
-    "editorconfig.editorconfig"
+    "editorconfig.editorconfig",
+    "prisma.prisma-insider",
+    "prisma.prisma"
   ]
 }
