update schema prisma

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,13 +1,13 @@
 singleQuote: true
-trailingComma: "all"
+trailingComma: 'all'
 printWidth: 100
 semi: false
-endOfLine: "lf"
+endOfLine: 'lf'
 svelteBracketSameLine: true
 svelteStrictMode: false
 svelteAllowShorthand: true
 svelteBracketNewLine: true
-svelteSortOrder: "markup-scripts-styles-options"
+svelteSortOrder: 'markup-scripts-styles-options'
 bracketSameLine: true
-arrowParens: "avoid"
-htmlWhitespaceSensitivity: "strict"
+arrowParens: 'avoid'
+htmlWhitespaceSensitivity: 'strict'
