--- a/.config.env
+++ b/.config.env
@@ -1,2 +1,3 @@
 LAUNCH_EDITOR=code-insiders
 # this is to chose the editor redirection file inspector https://github.com/sveltejs/vite-plugin-svelte/blob/main/docs/inspector.md
+DIRECT_URL="############"
