--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "svelte": "^3.9.2"
+    "svelte": "^3.9.2",
+    "sass": "^1.62.1"
   }
 }
